--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "RAmqtt"
+name = "mqttrs"
 version = "0.1.0"
 authors = ["00imvj00 <vijaybambhaniya007@gmail.com>"]
 edition = "2018"
 description = "mqttrs is encoding & decoding library for mqtt protocol, it can work with both sync as well as async apps"
 homepage = "https://github.com/00imvj00/mqttrs"
 repository = "https://github.com/00imvj00/mqttrs"
-keywords = ["mqtt", "encoding", "decoding", "async", "async mqtt"]
+keywords = ["mqtt", "encoding", "decoding", "async", "async-mqtt"]
 license = "Apache-2.0"
 
 
