--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
+cargo-features = ["edition"]
+
 [package]
 name = "mqttrs"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["00imvj00 <vijaybambhaniya007@gmail.com>"]
 edition = "2018"
 description = "mqttrs is encoding & decoding library for mqtt protocol, it can work with both sync as well as async apps"
