--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "mqttrs"
 version = "0.1.4"
-authors = ["00imvj00 <vijaybambhaniya007@gmail.com>"]
+authors = ["00imvj00 <vijaybambhaniya007@gmail.com>",
+        "Vincent de Phily <moltonel@gmail.com>"]
 edition = "2018"
 description = "mqttrs is encoding & decoding library for mqtt protocol, it can work with both sync as well as async apps"
 homepage = "https://github.com/00imvj00/mqttrs"
