--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,15 @@ categories = ["encoding", "network-programming"]
 license = "Apache-2.0"
 
 [features]
+default = ["std"]
+
 # Implements serde::{Serialize,Deserialize} on mqttrs::Pid.
 derive = ["serde"]
+std = ["bytes/std", "serde/std"]
 
 [dependencies]
-bytes = "0.5"
+bytes = { version = "0.5", default-features = false }
 serde = { version = "1.0", features = ["derive"], optional = true }
 
 [dev-dependencies]
 proptest = "0.9.4"
-
