--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 name = "mqttrs"
 version = "0.2.0"
 authors = ["00imvj00 <vijaybambhaniya007@gmail.com>",
-           "Vincent de Phily <moltonel@gmail.com>"]
+           "Vincent de Phily <moltonel@gmail.com>",
+           "Mathias Koch <smilykoch@gmail.com>"]
 edition = "2018"
 description = "Mqtt protocol encoding and decoding"
 readme = "README.md"
@@ -10,7 +11,7 @@ homepage = "https://github.com/00imvj00/mqttrs"
 repository = "https://github.com/00imvj00/mqttrs"
 documentation = "https://docs.rs/mqttrs"
 keywords = ["mqtt", "pubsub", "publish-subscribe", "codec"]
-categories = ["encoding", "network-programming"]
+categories = ["encoding", "network-programming", "no-std"]
 license = "Apache-2.0"
 
 [features]
