--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ default = ["std"]
 
 # Implements serde::{Serialize,Deserialize} on mqttrs::Pid.
 derive = ["serde"]
-std = ["bytes/std", "serde/std"]
+alloc = ["serde/alloc"]
+std = ["bytes/std", "serde/std", "alloc"]
 
 [dependencies]
 bytes = { version = "0.5", default-features = false }
