--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ license = "Apache-2.0"
 
 [features]
 default = ["std"]
-
-# Implements serde::{Serialize,Deserialize} on mqttrs::Pid.
+# Implements serde::{Serialize,Deserialize} on some mqttrs structs.
 derive = ["serde"]
-std = ["bytes/std", "serde/std"]
+# Implements std::error::Error and std::io::{Read,Write}.
+std = ["bytes/std"]
 
 [dependencies]
 bytes = { version = "0.5", default-features = false }
