--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,11 @@ default = ["std"]
 
 # Implements serde::{Serialize,Deserialize} on mqttrs::Pid.
 derive = ["serde"]
-alloc = []
-std = ["bytes/std", "serde/std", "alloc"]
+std = ["bytes/std", "serde/std"]
 
 [dependencies]
 bytes = { version = "0.5", default-features = false }
 serde = { version = "1.0", features = ["derive"], optional = true }
 
 [dev-dependencies]
-proptest = "0.9.4"
+proptest = "0.10.0"
