--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ std = ["bytes/std", "serde/std"]
 [dependencies]
 bytes = { version = "0.5", default-features = false }
 serde = { version = "1.0", features = ["derive"], optional = true }
+heapless = "0.5.5"
 
 [dev-dependencies]
 proptest = "0.10.0"
