Refactor encode to use (buf, offset), instead of BufMut, allowing the removal of Bytes as dependency, in case of no_std where an allocator is not available, as Bytes requires an allocator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,10 @@ default = ["std"]
 
 # Implements serde::{Serialize,Deserialize} on mqttrs::Pid.
 derive = ["serde"]
-std = ["bytes/std", "serde/std"]
+std = ["bytes", "bytes/std", "serde/std"]
 
 [dependencies]
-bytes = { version = "0.5", default-features = false }
+bytes = { version = "0.5", default-features = false, optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 heapless = "0.5.5"
 
