Fix build with no-std and serde

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ license = "Apache-2.0"
 default = ["std"]
 
 # Implements serde::{Serialize,Deserialize} on mqttrs::Pid.
-derive = ["serde"]
+derive = ["serde", "heapless/serde"]
 std = ["bytes/std", "serde/std"]
 defmt = ["dep:defmt", "heapless/defmt-03"]
 
